ajout du fichier javascript

--- a/test_git.html
+++ b/test_git.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="test_css_git.css">
+    <script type="text/javascript" src="test_javascript.js"></script>
     <title>Document</title>
+
 </head>
 <body>
     <p>Hello world!</p>
     <p>test git</p>
+    <p>
+        <button type="button" id="Mon bouton">
+        Add to favorites
+        </button>
+    </p>
 </body>
 </html>
