--- a/test_git.html
+++ b/test_git.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="test_css_git.css">
     <script type="text/javascript" src="test_javascript.js"></script>
+    <!--<script>
+        alert("Vous êtes bien sur le site !");
+    </script>-->
     <title>Document</title>
 
 </head>
