--- a/test_git.html
+++ b/test_git.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="test_css_git.css">
-    <script type="text/javascript" src="test_javascript.js"></script>
     <!--<script>
         alert("Vous êtes bien sur le site !");
     </script>-->
@@ -20,5 +19,9 @@
         Add to favorites
         </button>
     </p>
+    <p id="1erpara">un paragraphe supplémentaire</p>
+    <div id="madiv">texte de la div pour le javascript</div>
+
 </body>
+<script type="text/javascript" src="test_javascript.js"></script>
 </html>
