ajout de javascript et de commentaires

--- a/jeu.html
+++ b/jeu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="test_css_git.css">
+    <link rel="stylesheet" href="style.css">
     <!--<script>
         alert("Vous êtes bien sur le site !");
     </script>-->
@@ -15,13 +15,13 @@
     <p>Hello world!</p>
     <p>test git</p>
     <p>
-        <button type="button" id="Mon bouton">
+        <button type="button" id="Mon bouton" onclick="ma_fonction()">
         Add to favorites
         </button>
     </p>
     <p id="1erpara">un paragraphe supplémentaire</p>
-    <div id="madiv">texte de la div pour le javascript</div>
+    <div id="madiv" onclick="ma_fonction()">texte de la div pour le javascript</div>
 
 </body>
-<script type="text/javascript" src="test_javascript.js"></script>
+<script type="text/javascript" src="script2.js"></script>
 </html>
